# cutDetector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  main.cpp  wercker.yml
build_scripts/: win_copy_dll.sh
detector/: CMakeLists.txt  adjacent_frames_scene_detector.cpp  adjacent_frames_scene_detector.hpp  command_line_debug.cpp  command_line_debug.hpp  command_line_impl.cpp  command_line_impl.hpp  command_line_strings.cpp  command_line_strings.hpp  cut_detector.cpp  cut_detector.hpp  frame_comparator_impl.cpp  frame_comparator_impl.hpp  frame_comparator_strings.cpp  frame_comparator_strings.hpp  histogram_based_frame_comparator.cpp  histogram_based_frame_comparator.hpp  open_cv_video_reader.cpp  open_cv_video_reader.hpp  scene_detector_impl.cpp  scene_detector_impl.hpp  video_reader_impl.cpp  video_reader_impl.hpp
gui/: CMakeLists.txt  comparator_options_dialog.cpp  comparator_options_dialog.h  comparator_options_dialog.ui  cut_detector_qt_interface.cpp  cut_detector_qt_interface.h  frame_difference_graph_dialog.cpp  frame_difference_graph_dialog.h  frame_difference_graph_dialog.ui  graph_widget_controller.cpp  graph_widget_controller.h  gui.cpp  gui.hpp  main_gui.cpp  main_window.cpp  main_window.h  main_window.ui  opencv_image_widget.cpp  opencv_image_widget.h  scene_list_preview_dialog.cpp  scene_list_preview_dialog.h  scene_list_preview_dialog.ui
gui/QCustomPlot_gen/: qcustomplot.cpp  qcustomplot.h
include/: command_line.h  command_line_debug.hpp  command_line_impl.hpp  frame_comparator.h  frame_comparator_impl.hpp  scene_detector.h  scene_detector_impl.hpp  video_reader.h  video_reader_impl.hpp
includes/: frame_comparator.h  frame_comparator_impl.hpp
lib/: CMakeLists.txt  command_line_debug.cpp  command_line_impl.cpp  frame_comparator_impl.cpp  scene_detector_impl.cpp  video_reader_impl.cpp
python/: compare.py
tests/: CMakeLists.txt  frame_comparator_mock.hpp  frame_comparator_test.cpp  opencv_video_reader_test.cpp  scene_detector_mock.hpp  scene_detector_test.cpp  testgtest.cpp  video_reader_mock.hpp  video_reader_test.cpp
