add_library(detector SHARED
    command_line_debug.cpp
    command_line_debug.hpp
    command_line_impl.cpp
    command_line_impl.hpp
    command_line_strings.cpp
    command_line_strings.hpp
    frame_comparator_impl.cpp
    frame_comparator_impl.hpp
    frame_comparator_strings.cpp
    frame_comparator_strings.hpp
    video_reader_impl.cpp
    video_reader_impl.hpp
    scene_detector_impl.cpp
    scene_detector_impl.hpp )
